# libptpll

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
lib/: CMakeLists.txt
src/: CMakeLists.txt  model.cpp  model.hpp  model_parameters.cpp  model_parameters.hpp  pll_partition.cpp  pll_partition.hpp  pll_util.cpp  pll_util.hpp
test/: CMakeLists.txt  test_ptpll.cpp
test/test-data/five_JC/: RAxML_bestTree.five_JC  RAxML_info.five_JC  RAxML_log.five_JC  RAxML_parsimonyTree.five_JC  RAxML_result.five_JC
test/test-data/map/: map_test_alpha_0.1299395.tre
test/test-data/util/: two_peaks_extra_garbage.nw  two_peaks_extra_line.nw  two_peaks_extra_whitespace.nw
